HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeDefer/Source/Main.uv
//! Rejected key-system specimen for a defer statement inside speculative execution.

public procedure speculativeDeferReference() -> i32 {
    var shared_value: shared i32 = 1
    #shared_value speculative write {
        defer {
            let observed: i32 = shared_value
        }
        shared_value = 2
    }
    return 0
}
